--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "This is the advance user interface of Monoisam",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack",
+    "start:dev": "webpack serve"
   },
   "keywords": [
     "monoisam"
