--- a/package.json
+++ b/package.json
@@ -13,24 +13,33 @@
   ],
   "author": "Sana",
   "license": "ISC",
-  "dependencies": {
-    "babel-loader": "^8.2.3",
-    "bootstrap": "^5.1.3",
-    "clean-webpack-plugin": "^4.0.0",
-    "css-loader": "^6.5.1",
-    "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^5.5.0",
-    "jquery": "^3.6.0",
-    "jquery-scrollify": "^1.0.21",
-    "mini-css-extract-plugin": "^2.5.0",
-    "sass-loader": "^12.4.0",
-    "terser-webpack-plugin": "^5.3.0",
-    "webpack": "^5.66.0",
-    "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.7.3"
-  },
+  "dependencies": {},
   "devDependencies": {
-    "@webpack-cli/generators": "^2.4.1"
+    "@babel/cli": "^7.12.10",
+    "@babel/core": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
+    "@fortawesome/fontawesome-free": "^5.15.2",
+    "@popperjs/core": "^2.6.0",
+    "babel-loader": "^8.2.2",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "bootstrap": "^5.0.0-beta1",
+    "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^5.0.1",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.0.0",
+    "html-webpack-pug-plugin": "^2.0.1",
+    "jquery": "^3.5.1",
+    "mini-css-extract-plugin": "^1.3.5",
+    "node-sass": "^5.0.0",
+    "pug": "^3.0.0",
+    "pug-html-loader": "^1.1.5",
+    "pug-loader": "^2.4.0",
+    "sass-loader": "^10.1.1",
+    "style-loader": "^2.0.0",
+    "terser-webpack-plugin": "^5.1.1",
+    "webpack": "^5.21.2",
+    "webpack-cli": "^4.5.0",
+    "webpack-dev-server": "^3.11.2"
   },
   "repository": {
     "type": "git",
